Fixing alert covering navbar AND making dynamic

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ button{
   width: 100%;
   margin-top: -3.5rem;
   padding-top: 50px;
-  transition: 0.3s all;
   z-index: 100;
   background-color: #0056C0;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
